--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="icon" href="img/VCGEC LOGO.png">
     <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+
+    
 </head>
 <body>
     
@@ -266,24 +269,24 @@
   
             <div class="row m-0">
               <div class="col-md-12 p-0 pt-4 pb-4">
-                <form action="#" class="bg-light pt-4 m-auto">
+                <form class="bg-light pt-4 m-auto" id="contact-form">
                   <div class="row">
                     <div class="col-md-12">
                       <div class="mb-3">
-                        <input type="text" class="form-control" required placeholder="Your Name">
+                        <input type="text" class="form-control" id="senderName" required placeholder="Your Name">
                       </div>
                     </div>
                     <div class="col-md-12">
                       <div class="mb-3">
-                        <input type="email" class="form-control" required placeholder="Your Email">
+                        <input type="email" class="form-control" id="email" required placeholder="Your Email">
                       </div>
                     </div>
                     <div class="col-md-12">
                       <div class="mb-3">
-                        <textarea rows="3" class="form-control" placeholder="Your Message"></textarea>
+                        <textarea rows="3" class="form-control" id="message" placeholder="Your Message" required></textarea>
                       </div>
                     </div>
-                    <button class="btn btn-warning btn-lg btn-blockx">Send</button>
+                    <button class="btn btn-warning btn-lg btn-blockx" type="submit" value="Send">Send</button>
                   </div>
                 </form>
               </div>
@@ -311,6 +314,10 @@
       </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
+
+    <script src="script.js" type="text/javascript"></script>
+
 </body>
 </html>
