fixing the contact us form

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                         <textarea rows="3" class="form-control" id="message" placeholder="Your Message" required></textarea>
                       </div>
                     </div>
-                    <button class="btn btn-warning btn-lg btn-blockx" type="submit" value="Send">Send</button>
+                    <button class="btn btn-warning btn-lg btn-blockx" type="submit" >Send</button>
                   </div>
                 </form>
               </div>
