Adding scroll animation

--- a/index.html
+++ b/index.html
@@ -98,15 +98,15 @@
     <!-- About Section -->
         <section id="about" class="about section-padding ">
           <div class="container">
-            <div class="row">
+            <div class="row" >
               <div class="col-lg-8 col-md-12 col-12 ps-lg-5 mt-md-5">
-                <div class="about-text">
+                <div class="about-text" id="popup">
                   <h2>About Us</h2>
                   <p>Folkverse Venture is a passionate endeavor committed to transforming the educational experience for Grade 5 students at Lawang Bato Elementary School. Our pioneering Android application seamlessly merges traditional Filipino education with cutting-edge technology, providing an interactive virtual classroom where learning the Filipino language is enriched by the exploration of our rich cultural heritage. Our dedicated team of educators, developers, and designers collaborates tirelessly to ensure that students receive engaging lessons, personalized instructor guidance, and the captivating tales of Filipino folklore. At Folkverse Venture, we envision a future where education not only empowers young minds but also connects them to the heart of Filipino culture, fostering a deep appreciation for our traditions and values.</p>
                   <a href="#" class="btn btn-warning mb-3">Learn More</a>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-12 col-12">
+              <div class="col-lg-4 col-md-12 col-12" id="popup">
                 <div class="about-img">
                   <img src="img/about.jpg" alt="One Piece" class="img-fluid">
                 </div>
@@ -120,7 +120,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12">
-                <div class="section-header text-center pb-3">
+                <div class="section-header text-center pb-3" id="popup">
                   <h2>Our Service</h2>
                   <p>"Unlocking Learning, Embracing Culture: Your Path to Enriched Filipino Education"</p>
                 </div>
@@ -128,8 +128,8 @@
             </div>
   
             <div class="row mb-5" >
-              <div class="col-md-12 col-lg-4  mb-2">
-                <div class="card text-white text-center bg-dark pb-2">
+              <div class="col-md-12 col-lg-4  mb-2" id="left">
+                <div class="card text-white text-center bg-dark pb-2" >
                   <div class="card-body ">
                     <i class="bi bi-pencil-fill"></i>
                     <h3 class="card-title">Interactive Lessons</h3>
@@ -138,7 +138,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-12 col-lg-4  mb-2" >
+              <div class="col-md-12 col-lg-4  mb-2" id="popup">
                 <div class="card text-white text-center bg-dark pb-2">
                   <div class="card-body ">
                     <i class="bi bi-mic-fill"></i>
@@ -148,7 +148,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-12 col-lg-4 mb-2">
+              <div class="col-md-12 col-lg-4 mb-2" id="right">
                 <div class="card text-white text-center bg-dark pb-2">
                   <div class="card-body ">
                     <i class="bi bi-people-fill"></i>
@@ -166,7 +166,7 @@
 
         <section id="team" class="team">
           <div class="container">
-            <div class="row">
+            <div class="row" id="popup">
               <div class="col-md-12">
                 <div class="text-center section-header pb-12">
                   <h2>Our Team</h2>
@@ -176,7 +176,7 @@
             </div>
   
             <div class="row d-flex justify-content-center">
-              <div class=" col-md-12  col-lg-4 mb-2 ">
+              <div class=" col-md-12  col-lg-4 mb-2 " id="left">
                 <div class="card text-dark text-center bg-white">
                   <div class="card-body">
                     <img src="img/izuku.png" alt="Izuku" class="img-fluid rounded-circle mb-2">
@@ -191,7 +191,7 @@
                   </div>
                 </div>
               </div>
-              <div class=" col-md-12 col-lg-4 mb-2">
+              <div class=" col-md-12 col-lg-4 mb-2" id="popup">
                 <div class="card text-dark text-center bg-white">
                   <div class="card-body">
                     <img src="img/izuku.png" alt="Izuku" class="img-fluid rounded-circle mb-2">
@@ -206,7 +206,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-12 col-lg-4 mb-2">
+              <div class="col-md-12 col-lg-4 mb-2" id="right">
                 <div class="card text-dark text-center bg-white">
                   <div class="card-body">
                     <img src="img/izuku.png" alt="Izuku" class="img-fluid rounded-circle mb-2">
@@ -221,7 +221,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-12 col-lg-4 mb-2">
+              <div class="col-md-12 col-lg-4 mb-2" id="popup">
                 <div class="card text-dark text-center bg-white">
                   <div class="card-body">
                     <img src="img/izuku.png" alt="Izuku" class="img-fluid rounded-circle mb-2">
@@ -236,7 +236,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-12 col-lg-4 mb-2">
+              <div class="col-md-12 col-lg-4 mb-2" id="popup">
                 <div class="card text-dark text-center bg-white">
                   <div class="card-body">
                     <img src="img/izuku.png" alt="Izuku" class="img-fluid rounded-circle mb-2">
@@ -256,8 +256,8 @@
           </div>
         </section>
   
-        <section id="contact" class="contact section-padding">
-          <div class="container">
+        <section id="contact" class="contact section-padding" >
+          <div class="container" id="popup">
             <div class="row">
               <div class="col-md-12">
                 <div class="section-header text-center pb-12">
